# catalyze-old

./: .clang-format  .gitignore  .taplo.toml  Cargo.toml  README.md  build.rs  params.txt  params__2.txt  testing.txt
catalyze/: Cargo.toml
catalyze-build/: Cargo.toml
catalyze-build/src/: lib.rs
catalyze-codec/: Cargo.toml
catalyze-interface/: Cargo.toml
catalyze-interface/src/: enums.rs  interface.rs  lib.rs
catalyze-macros/: Cargo.toml
catalyze-prost/: Cargo.toml
catalyze-prost/src/: integration.rs  lib.rs  name_part.rs  proto.rs
catalyze-prost/src/proto/: enums.rs  iter.rs  prost_name_part.rs
catalyze-types/: Cargo.toml
catalyze-types/src/: descriptor.rs  enums.rs  lib.rs  path.rs  source_code_info.rs  syntax.rs  uninterpreted_option.rs  well_known.rs
catalyze/src/: artifact.rs  ast.rs  codec.rs  comments.rs  container.rs  context.rs  enum_.rs  enum_value.rs  error.rs  extension.rs  field.rs  file.rs  generator.rs  input.rs  lib.rs  message.rs  method.rs  name.rs  node.rs  oneof.rs  package.rs  parameters.rs  proto.rs  range.rs  service.rs  uninterpreted_option.rs  unknown.rs  visit.rs  well_known.rs  well_known_type.rs  wire.rs
catalyze/src/field/: embed_field.rs  enum_field.rs  map_field.rs  oneof_field.rs  repeated_field.rs  scalar_field.rs
catalyze/src/proto/: enums.rs  iter.rs
catalyze/src/util/: message_graph.rs
protoc-gen-echo/: Cargo.toml  README.md
protoc-gen-echo/src/: main.rs
src/: artifact.rs  ast.rs  codec.rs  comments.rs  container.rs  context.rs  entity.rs  enum.rs  enum_value.rs  extension.rs  field.rs  file.rs  generator.rs  input.rs  iter.rs  lib.rs  message.rs  method.rs  module.rs  name.rs  node.rs  one_of.rs  oneof.rs  package.rs  parameters.rs  path.rs  proto.rs  rust.rs  service.rs  source.rs  traits.rs  util.rs  visit.rs  well_known_type.rs
src/descriptor/: mod.rs
src/field/: embed_field.rs  enum_field.rs  field_iter.rs  label.rs  map_enum_field.rs  map_field.rs  map_field_key.rs  map_message_field.rs  map_scalar_field.rs  message_field.rs  mod.rs  oneof_enum_field.rs  oneof_field.rs  oneof_message_field.rs  oneof_scalar_field.rs  repeated_enum_field.rs  repeated_field.rs  repeated_message_field.rs  repeated_scalar_field.rs  scalar_field.rs  type.rs  well_known_type_field.rs  wkt_field.rs
src/field/descriptor/: c_type.rs  mod.rs  (+5 more)
src/graph/: message_graph.rs  mod.rs
src/lang/: lang.rs  mod.rs  not_specified.rs  rust.rs  unspecified.rs
src/language/: language.rs  mod.rs  not_specified.rs  rust.rs
src/proto/: descriptor.rs  enums.rs  iter.rs  mod.rs  name_part.rs  path.rs  source_code_info.rs  syntax.rs  uninterpreted_option.rs
src/protobuf/: any.rs  api.rs  descriptor.rs  enum.rs  field.rs  file.rs  label.rs  message.rs  method.rs  mod.rs  one_of.rs  option.rs  range.rs  service.rs  source_code_info.rs  source_context.rs  syntax.rs  type.rs  uninterpreted_option.rs  value.rs
src/util/: format.rs  generic.rs  lang.rs  message_graph.rs  mod.rs  rust.rs  typescript.rs  unspecified.rs
tests/: Cargo.toml
tests/code-generator-requests/: kitchen
tests/src/: lib.rs
(+34 files in other folders)
