[package]
name = "catalyze"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.4"
anyhow = "1.0.53"
petgraph = { version = "0.6.0", optional = true }
lazy_static = "1.4.0"
prost-types = "0.9.0"

[build-dependencies]
which = { version = "4.2" }

[workspace]
members = ["catalyze-build", "catalyze-prost"]

[features]

default = ["message-graph"]
# Enables the `MessageGraph` util sourced from prost to determine dependency cycles.
message-graph = ["petgraph"]
