[package]
edition = "2021"
name    = "catalyze"
version = "0.1.0"

[dependencies]
anyhow      = "1.0"
bytes       = "1.1"
heck        = "0.4"
lazy_static = "1.4"
petgraph    = { version = "0.6", optional = true }
proc-macro2 = "1.0"
protobuf    = "3.3.0"
semver      = "1.0"
thiserror   = "1.0"

[features]
default = ["message-graph"]
# Enables the `MessageGraph` util sourced from prost to determine dependency cycles.
message-graph = ["petgraph"]
